fix carousel on mobile

--- a/src/components/Projects/What2Yum/What2Yum.css
+++ b/src/components/Projects/What2Yum/What2Yum.css
@@ -43,10 +43,7 @@
   position: relative;
   width: 100%;
   height: 0;
-  padding-bottom: 150%;
-  /* border-radius: 20px; 
-  overflow: hidden;
-  -webkit-transform: translateZ(0); */
+  padding-bottom: 75%;
 }
 .carousel-video {
   position: absolute;
@@ -56,21 +53,13 @@
   height: 100%;
 }
 
-.iphone-overlay {
-  position: absolute;
-  top: 0;
-  left: center;
-  width: 70%;
-  height: auto;
-}
-
 .swiper-slide {
   text-align: center;
 }
 
 .swiper-button-next, .swiper-button-prev {
   color: rgb(115, 143, 81) !important;
-  background: rgba(255, 255, 255, 1) !important;
+  /* background: rgba(255, 255, 255, 1) !important; */
   width: 60px !important;
   height: 80px !important;
   margin-top: -40px !important;
@@ -101,7 +90,7 @@
   background: rgb(115, 143, 81) !important;
 }
 .swiper-button-next:after, .swiper-button-prev:after {
-  font-size: 20px !important;
+  font-size: 30px !important;
 } 
 
 .swiper-container {
@@ -111,7 +100,7 @@
 @media (max-width: 600px) {
   .swiper-slide {
     max-width: 100% !important;
-    width: 50% !important;
+    width: 100% !important; /* needed to fix swiper.js bug for max-width on mobile */
   }
 }
 
